# intentional

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  Taskfile.yml  action.yml
.github/workflows/: cd.yml  ci.yml  publish-docs.yml  release.yml  repair-release-checksums.yml
.intentional/: config.yml
.intentional/intents/: amber-willow-38d1.md  calm-falcon-3d5d.md  devcontainer-candidates.md  lucky-otter-3167.md  package-readmes.md  portable-release-checksums.md  quiet-lantern-bc46.md
.itentional/: config.yml
.itentional/intents/: calm-falcon-3d5d.md
crates/cli/: Cargo.toml
crates/cli/skills/intentional/: SKILL.md
crates/cli/skills/intentional/agents/: openai.yaml
crates/cli/src/: main.rs
crates/cli/tests/: changesets_takeover.rs  cli.rs
crates/core/: Cargo.toml
crates/core/src/: apply.rs  check.rs  config.rs  error.rs  init.rs  intent.rs  lib.rs  model.rs  plan.rs  stamp.rs  status.rs  tag.rs  version.rs
crates/core/src/adapters/: ecosystem.rs  format.rs  mod.rs
crates/core/tests/fixtures/ecosystems/: Cargo.toml  package.json
crates/core/tests/fixtures/formats/: comments.toml  comments.yaml  odd.json
docs/: config.md  demo.tape  docs.yml  install.md  overview.md  usage.md
docs/technical-designs/: intent-driven-polyglot-release.yml
npm/: README.md  install.js  package.json
npm/test/: installer.test.js  launcher.test.js  package.test.js
schemas/: config.yml  init-plan.yml  release-plan.yml  tag-record.yml
scripts/: check-docs.sh
scripts/release/: ensure-crate.sh  ensure-github-release.sh  ensure-npm.sh  extract-release-notes.sh  package-archive.py  render-homebrew-formula.sh  test-retry.sh  verify-versions.py
