# ---
# relationships:
#   implements: intent-driven-polyglot-release
# ---
[workspace]
members = ["crates/core", "crates/cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
repository = "https://github.com/wyrd-company/itentional"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
thiserror = "2.0"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

