# ---
# relationships:
#   implements: intent-driven-polyglot-release
# ---
[package]
name = "intentional-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Polyglot intent-driven release CLI"

[[bin]]
name = "intentional"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
intentional-core = { path = "../core", version = "0.1.0" }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
serde_json.workspace = true
tempfile = "3.8"
