# ---
# relationships:
#   implements: intent-driven-polyglot-release
# ---
[package]
name = "itentional-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core model and release planning for itentional"

[dependencies]
gix.workspace = true
semver.workspace = true
serde.workspace = true
serde_yaml.workspace = true
tagver.workspace = true
thiserror.workspace = true
