# ---
# relationships:
#   implements: intent-driven-polyglot-release
# ---
[package]
name = "intentional-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
description = "Core model and release planning for intentional"

[dependencies]
gix.workspace = true
glob.workspace = true
rand.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
tagver.workspace = true
thiserror.workspace = true
toml_edit.workspace = true
walkdir.workspace = true
